square choosing works

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-[ ] implement a most recently selected square
+[X] implement a most recently selected square
     - updating this square will return the old one to normal and change the new one to selected
 [ ] make an enum for pieces
 [ ] draw the actual pieces
