added king move display

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,9 @@
 [X] implement a most recently selected square
     - updating this square will return the old one to normal and change the new one to selected
-[ ] make an enum for pieces
+[X] make an enum for pieces
 [ ] draw the actual pieces
-[ ] show piece recommendations on click
 [ ] make piece movement
+[ ] show piece recommendations on click
 [ ] make turns
 [ ] make check condition
 [ ] make checkmate & win/loss/draw
